Fixed regression - menu not visible on wide screens

--- a/styleguide/source/assets/scss/03-organisms/_header.scss
+++ b/styleguide/source/assets/scss/03-organisms/_header.scss
@@ -75,6 +75,7 @@
   
   @include breakpoint($bp-med) {
     max-height: none;
+    opacity: 1;
     visibility: visible;
     position: static;
     background: none;
